Fixed checkbox on mobile for toggle

--- a/_assets/sass/theme/_input.checkbox.scss
+++ b/_assets/sass/theme/_input.checkbox.scss
@@ -21,7 +21,7 @@ fieldset {
 
     input[type="checkbox"] {
       + span:before {
-        content: "\f14e";
+        content: "\f372";
       }
 
       &:checked + span:before {
